[package]
name = "vintbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "core"

[dependencies]
log = "0.4.17"
once_cell = "1.17.1"
reqwest = { version = "0.11.14", features = ["cookies", "json", "gzip"] }
serde = "1.0.157"
serde_derive = "1.0.157"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
