[package]
name = "vintbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "core"

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["cookies", "json", "gzip"] }
rusqlite = "0.28.0"
serde = "1.0.157"
serde_derive = "1.0.157"
serde_json = "1.0.94"
time = "0.3.20"
tokio = { version = "1.26.0", features = ["full"] }
